# sparse

./: CMakeLists.txt  README.md
ASPSS/: CMakeLists.txt  ExpeAlgebraicSphere.cpp  ExpeAlgebraicSphere.h  ExpeAlgebraicSphere.inl  ExpeAlgebraicSphere.tpp  ExpeApplication.cpp  ExpeApplication.h  ExpeAxisAlignedBox.h  ExpeBallNeighborhood.cpp  ExpeBallNeighborhood.h  ExpeBasicMesh2PointSet.cpp  ExpeBasicMesh2PointSet.h  ExpeCliProgressBar.h  ExpeColor.cpp  ExpeColor.h  ExpeCore.h  ExpeCorePCH.h  ExpeEigenSphereFitter.cpp  ExpeEigenSphereFitter.h  ExpeEigenSphericalMlsSurface.cpp  ExpeEigenSphericalMlsSurface.h  ExpeEuclideanNeighborhood.cpp  ExpeEuclideanNeighborhood.h  ExpeGeometryAutoReshape.cpp  ExpeGeometryAutoReshape.h  ExpeGeometryObject.cpp  ExpeGeometryObject.h  ExpeGeometryOperator.cpp  ExpeGeometryOperator.h  ExpeGeometryPCH.h  ExpeGolubSphereFitter.cpp  ExpeGolubSphereFitter.h  ExpeGolubSphericalMlsSurface.cpp  ExpeGolubSphericalMlsSurface.h  ExpeHalfedgeConnectivity.cpp  ExpeHalfedgeConnectivity.h  ExpeHalfedgeConnectivity.inl  ExpeHalfedgeIterators.h  ExpeIMLS.cpp  ExpeIMLS.h  (+144 more)
src/: CMakeLists.txt  DiscreteSibson.cpp  DiscreteSibson.h  Makefile  MyOMPSemaphore.cpp  MyOMPSemaphore.h  Sample_point.cpp  Sample_point.h  Settings.h  SmoothStepFitting1D.cpp  SmoothStepFitting1D.h  Timer.cpp  Timer.h  VTKCannyEdgeDetector.cpp  VTKCannyEdgeDetector.h  main.cpp
src/util/: MyGeometry.h  MyMath.h  MyTeem.h  MyTeem_v00.h  cutil_inline.h
